--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: TEST
 on:
-  push:
-    branches: [ "main" ]
+  schedule:
+    - cron: "15 2 * * *"
 jobs:
   run-script:
     runs-on: ubuntu-latest
